--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "camelcase": "error",
     "no-multiple-empty-lines": "error",
     "curly": "error",
-    "no-unused-vars": "error",
+//    "no-unused-vars": "error", //TODO specify types
     "no-duplicate-imports": "error"
   }
 }
