--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@shikijs/twoslash": "^1.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "excalibur": "^0.30.0-alpha.1135",
     "lucide-react": "^0.420.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -31,7 +33,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
