--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "npm run eslint && npm run tsc"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@shikijs/twoslash": "^1.12.1",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +33,7 @@
     "shiki": "^1.12.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.2",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
