--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "excalibur": "^0.30.0-alpha.1135",
+    "fuse.js": "^7.0.0",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.420.0",
     "next": "14.2.5",
