--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.420.0",
     "next": "14.2.5",
+    "next-safe-action": "^7.4.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -40,7 +41,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.2",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.14",
