--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run eslint && npm run tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
