--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@shikijs/rehype": "^1.12.1",
     "@shikijs/transformers": "^1.12.1",
     "@types/mdx": "^2.0.13",
+    "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,6 +43,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0",
+    "server-only": "^0.0.1",
     "shiki": "^1.12.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
