--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fs-extra": "^11.2.0",
     "fuse.js": "^7.0.0",
     "html-react-parser": "^5.1.12",
+    "lil-gui": "^0.19.2",
     "lucide-react": "^0.420.0",
     "next": "14.2.5",
     "next-safe-action": "^7.4.3",
