--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^2.0.23",
     "react-syntax-highlighter": "^15.5.0",
+    "sandpack-file-explorer": "^0.0.7",
     "server-only": "^0.0.1",
     "shiki": "^1.12.1",
     "tailwind-merge": "^2.4.0",
